src/test/ui/consts/const-eval/const-eval-overflow-3b.stderr
error[E0369]: cannot add `u8` to `i8`
  --> $DIR/const-eval-overflow-3b.rs:16:20
   |
LL |     = [0; (i8::MAX + 1u8) as usize];
   |            ------- ^ --- u8
   |            |
   |            i8
   |
help: change the type of the numeric literal from `u8` to `i8`
   |
LL |     = [0; (i8::MAX + 1i8) as usize];
   |                       ~~

error[E0308]: mismatched types
  --> $DIR/const-eval-overflow-3b.rs:16:22
   |
LL |     = [0; (i8::MAX + 1u8) as usize];
   |                      ^^^ expected `i8`, found `u8`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0369.
For more information about an error, try `rustc --explain E0308`.
